--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,29 @@
     height: 60px;
     background-color: rgb(15, 92, 207);
 }
+
+.container-fluid:nth-child(1) .row:last-child > .col-xs-6 {
+    height: 100px;
+}
+
+.container-nasted {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.container-nasted [class*=col-] {
+    background-color: lime;
+}
+
+.container-nasted .row {
+    padding: 10px 0;
+}
+
+#margine {
+    margin: 80px 0;
+}
+
+[class*=col-xs-offset] {
+    background-color: white;
+    border: none;
+}
