--- a/css/12bool.css
+++ b/css/12bool.css
@@ -156,7 +156,7 @@
 
 
 /* versione smartphone sm */
-@media all and (min-width: 576px) and (max-width: 767px) {
+@media all and (max-width: 767px) {
     .col-sm-1 {
         width: calc((100% / 12) * 1);
         max-width: calc((100% / 12) * 1);   
